Fix plausible domain

--- a/plausible.html
+++ b/plausible.html
@@ -1,2 +1,2 @@
 <!-- plausible --> 
-<script defer data-domain="workshop.mitchelloharawild.com" src="https://track.mitchelloharawild.com/js/plausible.js"></script>
+<script defer data-domain="workshop.f4sg.org" src="https://track.mitchelloharawild.com/js/plausible.js"></script>
